[package]
name = "tokito_ui"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "A small, opinionated egui component library — the design layer for Tokito."
license = "MIT"
repository = "https://github.com/VtronTokito/ui"

[dependencies]
egui = "0.29"
egui-phosphor = { version = "0.7", default-features = false, features = ["regular"] }

[lints.clippy]
too_many_arguments = "allow"
